--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,8 +1,10 @@
 #\u6570\u636E\u5E93\u7684url
-db.url=jdbc:mysql://127.0.0.1:3306/demo
+db.url=jdbc:mysql://172.16.157.224:3306/huge
 #\u7528\u6237\u540D
 db.username=root
 #\u5BC6\u7801
-db.password=app!@#$4321)P:?0p;/
+db.password=demo
 #\u8868\u540D
 db.tablename=user
+
+application.package=cn.vbill.middleware.huge.base
